      vignettes and demos as well as help pages.  The new option
      \code{"help.search.types"} controls the types of documentation
      and the order of their display.

      This also applies to HTML searches, which now give results in all
      of help pages, vignettes and demos.

      \item \code{socketConnection()} now has a \code{timeout} argument.
      It is now documented that large values (package \pkg{snow} uses a
      year) do not work on some OSes.

      \item The initialization of the random-number generator now uses
      the process ID as well as the current time, just in case two \R
      processes are launched very rapidly on a machine with
      low-resolution wall clock (some have a resolution of a second;
      modern systems have microsecond-level resolution).

      \item New function \code{pskill()} in the \pkg{tools} package to
      send a terminate signal to one or more processes, plus constants
      such as \code{SIGTERM} to provide a portable way to refer to
      signals (since the numeric values are OS-dependent).

      \item New function \code{psnice()} in the \pkg{tools} package to
      return or change the \sQuote{niceness} of a process.  (Refers to
      the \sQuote{priority class} on Windows.)

      \item \code{list.dirs()} gains a \code{recursive} argument.

      \item An \samp{Authors@R} field in a package \file{DESCRIPTION}
      file can now be used to generate \samp{Author} and
      \samp{Maintainer} fields if needed, and to auto-generate package
      citations.

      \item New utility \code{getElement()} for accessing either a list
      component or a slot in an S4 object.

      \item \code{stars()} gains a \code{col.lines} argument, thanks to
      Dustin Sallings. (Wish of \PR{14657}.)

      \item New function \code{regmatches()} for extracting or replacing
      matched or non-matched substrings from match data obtained by
      \code{regexpr()}, \code{gregexpr()} and \code{regexec()}.
